stylesheets/blog_stylesheet.css
/* GENERAL STYLING */

/*Stops Image bounce on mobile*/
html {
    height: 100%;
    overflow: hidden;
}
body {
    height: 100%;
    overflow: auto;
}
/*//////////////////////////*/


p{
  padding: 0px !important;
  margin: 0px !important;
  letter-spacing: .05em!important;
}

h3{
  letter-spacing: .05em!important;
}


/* CLASS STYLING */

.hero-button{
  background-color: #FF2AB0!important;
  color: white!important;
  border: 0px!important;
  margin: 1em;
  width: 12em;
  font-size: .8em!important;
  letter-spacing: .2em!important;
}

.hero-button:hover{
  background-color: #00FF00!important;
  color: #FF2AB0!important;
}

.fa-icon{
  color:#FF2AB0;
  font-size: 2.5em!important;
  padding: .5em;
}

.fa-icon:hover{
  color: #00FF00;
}

.site-header-container{
  display: flex;
}

.name-container{
  color: white;
  font-size: 2em;
  letter-spacing: .08em;
  text-align: center;
}

.section-container{
  width: 100%;
  max-width: 1000px;
}




/* ID stylings */

#about-section-container{
  margin: 3em auto;
}

#about-text-container{
  text-align: center;
  letter-spacing: .05em;
  padding: 0em 1.5em 3em 1.5em;
}

#contact-container{
  text-align: center;
}

#contact-section-container{
  text-align: center;
  color: white;
  letter-spacing: .05em;
  padding: 3em 0em 3em 0em;
  margin: 0px auto;
}

#contact-section-wrapper{
  width: 100%;
  background-color: #2D2929;
}

#into-text{
  color: white;
  letter-spacing: .05em;
  text-align: center;
  padding: 0em 1em 0.5em 1em;
}

#made-by{
  font-size: 0.8em;
}

#me-image{
  width: 80%;
  max-width: 20em;
  height: auto;
  display:block;
  margin:auto;
}

#welcome-button-container{
  margin-top: 1.5em;
  text-align: center;
}

#welcome-section-container{
    margin: 0em auto;
    padding: 1.5em 0em;
}


#welcome-text{
  color: #FF2AB0;
  text-align: center;
  font-size: 4.5em;
  letter-spacing: .08em;
}

#welcome-hr{
  border: 1px solid #00FF00;
  width: 70%;
  max-width: 280px;
  margin-top: 0px;
}

#welcome-wrapper{
  background-image: url(../assets/images/Hero-Image-edited.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%;
  position: relative;
}

/* MEDIA QUERIES */

@media (orientation: landscape) {
  #welcome-wrapper{
    min-height: 200!important%
}

@media screen and (min-width: 550px){
  .six.columns {
    width: 100%!important;
    margin: 0px;
  }

  #about-text-container{
    padding: 0em 2em 3em 2em
  }
}




@media screen and (min-width: 750px){
  .six.columns {
    width: 48%!important;
    padding-top: 13%;
  }

  #into-text{
    font-size: 1.3em;
  }

  #me-image{
    width: 80%;
    max-width: 30em;
  }

  #welcome-wrapper{
    height: 70%
  }
}

@media screen and (min-width: 800px){
  .six.columns {
    padding-top: 5%
  }
}

@media screen and (min-width: 986px){
  .six.columns {
    width: 48%!important;
    padding-top: 0%;
  }
}

